# DAIE

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  LICENSE  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements.txt  start_agent_node.sh  start_central_core.sh  test_agent_config.py
agent_node_system/: Dockerfile  requirements.txt
agent_node_system/agent_runtime/: main_agent.py
agent_node_system/communication/: central_client.py  encryption_layer.py  event_listener.py  message_handler.py  p2p_client.py
agent_node_system/config/: environment.py
agent_node_system/identity/: keypair_manager.py
agent_node_system/memory_system/episodic/: chat_history.py
agent_node_system/memory_system/semantic/: embedding_engine.py  knowledge_index.py  vector_store.py
agent_node_system/memory_system/short_term/: working_memory.py
agent_node_system/tool_executor/: permission_manager.py  tool_loader.py
central_core_system/: Dockerfile  requirements.txt
central_core_system/api_gateway/: main.py
central_core_system/config/: settings.py
central_core_system/coordination/: nats_jetstream.py
central_core_system/infrastructure/monitoring/: prometheus.yml
examples/: main.py  main2.py  semantic_memory_usage.py
src/daie/: __init__.py
src/daie/agents/: __init__.py  agent.py  config.py  message.py
src/daie/cli/: __init__.py  agent.py  core.py  main.py
src/daie/communication/: __init__.py  manager.py
src/daie/config/: __init__.py  system.py
src/daie/core/: __init__.py  llm_manager.py  node.py  server.py  system.py
src/daie/memory/: __init__.py  manager.py
src/daie/tools/: __init__.py  api_tool.py  file_manager.py  registry.py  selenium_tool.py  tool.py
src/daie/utils/: __init__.py  audio.py  camera.py  common.py  encryption.py  logger.py  serialization.py
src/decentralized_ai/: __init__.py
src/decentralized_ai/agents/: __init__.py  agent.py  config.py  message.py
src/decentralized_ai/cli/: __init__.py  agent.py  core.py  main.py
src/decentralized_ai/communication/: __init__.py  manager.py
src/decentralized_ai/config/: __init__.py  system.py
src/decentralized_ai/core/: __init__.py  llm_manager.py  node.py  system.py
src/decentralized_ai/memory/: __init__.py  manager.py
src/decentralized_ai/tools/: __init__.py  registry.py  tool.py
src/decentralized_ai/utils/: __init__.py  logger.py  serialization.py
tests/: conftest.py  test_agents.py  test_api_tools.py  test_cli.py  test_communication.py  test_coordination_layer.py  test_core.py  test_file_manager.py  test_integration.py  test_memory.py  test_node_examples.py  test_rag_config.py  test_selenium_tools.py  test_semantic_memory.py  test_tools.py  test_utils.py
