[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decentralized_ai"
version = "1.0.0"
authors = [
  { name="Kanishk Kumar Singh", email="kanishkkumar2004@gmail.com" }
]
description = "A Python library for creating and deploying decentralized AI agents with tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "nats-py>=2.6.0",
    "cryptography>=46.0.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "nbsphinx>=0.9.0",
]

[project.scripts]
dai = "decentralized_ai.cli.main:cli"
dai-agent = "decentralized_ai.cli.agent:cli"
dai-core = "decentralized_ai.cli.core:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
