[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daie"
version = "1.0.1"
authors = [
  { name="Kanishk Kumar Singh", email="kanishkkumar2004@gmail.com" }
]
description = "A Python library for creating and deploying decentralized AI agents with tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "nats-py>=2.6.0",
    "cryptography>=46.0.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "nbsphinx>=0.9.0",
]
audio = [
    "pyaudio>=0.2.14",
]
vision = [
    "opencv-python>=4.8.0",
    "numpy>=2.0.0",
]
browser = [
    "selenium>=4.18.0",
    "webdriver-manager>=4.0.0",
]
server = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-daemon>=3.0.0",
]
full = [
    "pyaudio>=0.2.14",
    "opencv-python>=4.8.0",
    "numpy>=2.0.0",
    "selenium>=4.18.0",
    "webdriver-manager>=4.0.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

rag = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-core>=0.1.0",
    "pdfminer.six>=20251107",
    "python-docx>=0.8.11",
    "textract>=1.6.5",
    "chromadb>=0.4.15",
    "faiss-cpu>=1.7.4",
]

[project.scripts]
daie = "daie.cli.main:cli"
daie-agent = "daie.cli.agent:cli"
daie-core = "daie.cli.core:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

